Bug 1464723 - Implement custom scrollbar support for GTK widget. r=karlt,dholbert
When any scrollbar color is specified, or scrollbar-width is thin, we
switch to use the fallback rendering.

The change to xulscrollbars.css is for ensuring that the scrollbar is
displayed for scrollbar-width: thin when there is no scrollbar color
specified. It wouldn't affect cases where -moz-appearance takes effect.

This also changes the fallback width of the scrollbars. Since the two
widths was picked rather randomly, I think it should be fine to change
it if a value looks better than the old one, especially on Linux which
is the main usecase for this fallback rendering.

Differential Revision: https://phabricator.services.mozilla.com/D3952

UltraBlame original commit: fcae76a34c32ad73442d7440a203230c053a7649

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -283,6 +283,13 @@ cursor
 :
 default
 ;
+background
+-
+color
+:
+#
+f0f0f0
+;
 }
 media
 all
@@ -445,6 +452,16 @@ horizontal
 :
 *
 /
+thumb
+{
+background
+-
+color
+:
+#
+cdcdcd
+;
+}
 thumb
 [
 orient
